--- a/home.html
+++ b/home.html
@@ -206,7 +206,7 @@
 
     <!-- Booking Modal -->
     <div id="bookingModal" class="modal-overlay">
-        <div class="modal-content" style="max-width: 600px;">
+        <div class="modal-content">
             <span class="close-modal">&times;</span>
             <div id="modalBody">
                 <!-- Dynamic Content -->
