--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="glass" style="position: fixed; top: 0; width: 100%; z-index: 100; padding: 15px 0;">
         <div class="container flex justify-between items-center">
-            <div class="flex items-center gap-3">
+            <div class="flex items-center gap-3 logo-container">
                 <div
                     style="width: 40px; height: 40px; background: var(--primary); border-radius: 8px; display: flex; align-items: center; justify-content: center; color: white;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
