--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </form>
 
             <p style="margin-top: 20px; font-size: 13px; color: var(--text-light);">
-                Belum punya akun? <a href="#" class="text-primary">Daftar Sekarang</a>
+                Belum punya akun? <a href="#" onclick="openRegisterModal(); return false;" class="text-primary">Daftar Sekarang</a>
             </p>
 
             <button onclick="window.location.href='/admin.html'" class="btn btn-outline"
@@ -149,6 +149,116 @@
         </div>
     </div>
     <script type="module" src="/main.js"></script>
+</body>
+
+<!-- Registration Modal -->
+<div id="registerModal" class="modal-overlay">
+    <div class="modal-content" style="max-width: 450px;">
+        <span class="close-modal" onclick="closeRegisterModal()">&times;</span>
+
+        <div class="logo-icon" style="margin-bottom: 15px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                <polyline points="9 22 9 12 15 12 15 22"></polyline>
+            </svg>
+        </div>
+
+        <h2 style="font-size: 24px; margin-bottom: 5px; text-align: center;">Daftar Akun Baru</h2>
+        <p style="color: var(--text-light); font-size: 14px; margin-bottom: 25px; text-align: center;">
+            Bergabunglah dengan Palanta House
+        </p>
+
+        <form id="registerForm">
+            <div class="form-group">
+                <label>Email</label>
+                <input type="email" id="regEmail" class="form-control" placeholder="nama@email.com" required>
+            </div>
+
+            <div class="form-group">
+                <label>Nama Lengkap</label>
+                <input type="text" id="regName" class="form-control" placeholder="Masukkan nama lengkap" required>
+            </div>
+
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" id="regPassword" class="form-control" placeholder="Minimal 6 karakter" required
+                    minlength="6">
+            </div>
+
+            <div class="form-group">
+                <label>Konfirmasi Password</label>
+                <input type="password" id="regConfirmPassword" class="form-control" placeholder="Ulangi password"
+                    required>
+            </div>
+
+            <div id="passwordError" style="color: #ef4444; font-size: 12px; margin-bottom: 15px; display: none;">
+                Password tidak cocok!
+            </div>
+
+            <button type="submit" class="btn btn-primary" style="width: 100%;">Daftar Sekarang</button>
+        </form>
+
+        <p style="margin-top: 20px; font-size: 13px; color: var(--text-light); text-align: center;">
+            Sudah punya akun? <a href="#" onclick="closeRegisterModal()" class="text-primary">Masuk</a>
+        </p>
+    </div>
+</div>
+
+<script type="module" src="/main.js"></script>
+<script>
+    // Registration Modal Functions
+    function openRegisterModal() {
+        document.getElementById('registerModal').classList.add('active');
+    }
+
+    function closeRegisterModal() {
+        document.getElementById('registerModal').classList.remove('active');
+    }
+
+    // Handle register form submission
+    document.addEventListener('DOMContentLoaded', () => {
+        const registerForm = document.getElementById('registerForm');
+        if (registerForm) {
+            registerForm.addEventListener('submit', (e) => {
+                e.preventDefault();
+
+                const password = document.getElementById('regPassword').value;
+                const confirmPassword = document.getElementById('regConfirmPassword').value;
+                const passwordError = document.getElementById('passwordError');
+
+                if (password !== confirmPassword) {
+                    passwordError.style.display = 'block';
+                    return;
+                }
+
+                passwordError.style.display = 'none';
+
+                // Get form data
+                const email = document.getElementById('regEmail').value;
+                const name = document.getElementById('regName').value;
+
+                // Here you would normally send data to backend
+                console.log('Registration data:', { email, name, password });
+
+                // Show success message
+                alert('Pendaftaran berhasil! Silakan login dengan akun Anda.');
+
+                // Close modal and reset form
+                closeRegisterModal();
+                registerForm.reset();
+            });
+        }
+    });
+
+    // Close modal when clicking outside
+    document.addEventListener('click', (e) => {
+        const modal = document.getElementById('registerModal');
+        if (e.target === modal) {
+            closeRegisterModal();
+        }
+    });
+</script>
 </body>
 
 </html>
